# dioxus-repo

./: Cargo.toml  shell.nix
desktop/: Cargo.toml
mobile/: Cargo.toml
web/: Cargo.toml
